# Projekt-SUML-PJATK

./: .gitignore  README.md  package-lock.json  pyproject.toml
data/karty-postaci/: aniol-karta.md  chopper-karta.md  egzekutor-karta.md  gubernator-karta.md  guru-karta.md  kierowca-karta.md  muza-karta.md  operator-karta.md
llm/: langgraph.py  main.ipynb  one_document_assistant.ipynb  whole_rag.ipynb
llm/data/karty-postaci/: Anioł.md  Chopper.md  Gubernator.md  Guru.md  Muza.md  Operator.md  aniol-karta.md  chopper-karta.md  egzekutor-karta.md  gubernator-karta.md  guru-karta.md  kierowca-karta.md  muza-karta.md  operator-karta.md  psychol-karta.md  tekknik-karta.md  zyleta-karta.md
llm/raw_data/: train-00000-of-00001-f131735b1a05d489.csv  train-00000-of-00001-f131735b1a05d489.parquet
src/: docker-compose.yml  run-dev.sh
src/backend-app/: .env.example  .gitignore  Dockerfile  README.md  database.db  deps.py  initial_data.json  main.py  requirements-linux.txt  requirements-windows.txt  requirements.txt
src/backend-app/core/: config.py
src/backend-app/data/: __init__.py  database.py  models.py  seed.py
src/backend-app/dtos/: generic-dto-models.py
src/backend-app/helpers/: auth_helper.py  config_helper.py
src/backend-app/llm/: __init__.py  langgraph.py  llm_graph.py  models.py  nodes.py  retrievers.py
src/backend-app/route/: auth.py
src/streamlit-app/: App.py  requirements.txt  settings.py
src/test-spa-react-py/: docker-compose.yml  package-lock.json  run-dev.sh
src/vite-client-suml/: nginx.conf  package-lock.json  package.json  vite.config.ts
(+89 files in other folders)
